# drf-practice

./: .dockerignore  .gitignore  .python-version  Dockerfile  README.md  deploy.py  pyproject.toml
.config/: gunicorn.py  ref.nginx  supervisord.conf
app/: Pygments.ipynb  Serializer.ipynb  Token.ipynb  Untitled.ipynb  UserSerializer.ipynb  db.sqlite3
app/amantha/: admin.py  apps.py  models.py  urls.py
app/amantha/migrations/: 0001_initial.py  0002_auto_20200320_1729.py
app/base/: admin.py  models.py  pagination.py  serializers.py  tests.py  urls.py  views.py
app/base/migrations/: 0001_initial.py  0002_auto_20200315_0954.py  0002_auto_20200318_0239.py  0002_auto_20200320_1724.py  0002_post_user.py
app/config/: settings.py  urls.py
app/members/: admin.py  apis.py  models.py  serializers.py  tests.py  urls.py  views.py
app/members/migrations/: 0001_initial.py  0002_auto_20200320_1729.py
app/snippets/: apis.py  generic.py  models.py  serializers.py  tests.py  urls.py  views.py
app/snippets/migrations/: 0001_initial.py  0002_snippet_author.py
app/templates/members/: login.html
app/templates/rest_framework/: api.html  base.html
