[tool.poetry]
name = "drf-practice"
version = "0.1.0"
description = ""
authors = ["Hyojin Kwon <raccoonhj33@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django-extensions = "^2.2.8"
requests = "^2.23.0"
pygments = "^2.6.1"
ipython = "^7.13.0"
notebook = "^6.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
