[tool.poetry]
name = "drf-practice"
version = "0.1.0"
description = ""
authors = ["Hyojin Kwon <raccoonhj33@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django-extensions = "^2.2.8"
requests = "^2.23.0"
pygments = "^2.6.1"
ipython = "^7.13.0"
notebook = "^6.0.3"
model_bakery = "^1.1.0"
psycopg2-binary = "^2.8.4"
pillow = "^7.0.0"
djangorestframework = "^3.11.0"
supervisor = "^4.1.0"
gunicorn = "^20.0.4"
django-storages = "^1.9.1"
boto3 = "^1.12.25"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
